# Fin_AI_Challenge

./: .env.example  .gitignore  .gitkeep  =4.51.0  CLAUDE.md  CFin_AI_Challengedatacompetitionsubmission_distilled_final.csv  PROJECT_STRUCTURE.md  README.md  activate_env.bat  check_test_data.py  compare_tokenizers.py  create_kiwi_custom_dict.py  debug_kb.py  evaluate_embeddings_korsts.py  fix_encoding.py  gitworkflow.md  improved_vision_prompts.py  kiwi_analysis_final_report.md  kiwi_custom_dictionary.tsv  kiwi_dictionary_documentation.md  kiwi_test_report.md  kiwi_user_dictionary.txt  process_vision_texts_with_kiwi.py  pyproject.toml  regenerate_embeddings_kure.py  requirements.txt  requirements_8bit.txt  requirements_competition.txt  save_pipeline_results.py  setup.py  setup_utf8.bat  show_chunk_details.py  simple_test_hierarchical.py  submission_8bit_full_context_20250823_233908.csv  submission_comp_env_final.csv  submission_distilled_final.csv  submission_distilled_v2_final.csv  submission_final.csv  temp_full_extraction.py  test_chunking_comparison.py  (+18 more)
.bmad-core/: core-config.yaml  install-manifest.yaml
.claude/: settings.local.json
baseline_code/: requirements.txt  run_baseline.py  run_baseline_quick.py
configs/: inference_config.yaml  model_config.py  question_generation_config.yaml  rag_config.yaml
data/: e5_rag_test_report.txt  model_test_results.json  rag_detailed_test_results.json  teacher_responses_sample.json
distillm2_implementation/: distillm_pairs_sample.csv  format_distillm_pairs.py  generate_submission_distilled.py  merge_lora_adapter.py  (+3 more)
(+753 files in other folders)
