[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-ai-challenge"
version = "0.1.0"
description = "Financial Security Knowledge Understanding AI Challenge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FSKU Team", email = "team@example.com"},
]
keywords = ["nlp", "financial", "security", "llm", "distillation"]

[project.urls]
Homepage = "https://github.com/yourusername/fin-ai-challenge"
Documentation = "https://github.com/yourusername/fin-ai-challenge/docs"
Repository = "https://github.com/yourusername/fin-ai-challenge"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 100
target-version = "py310"
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]